--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url><http://3.111.38.255:9980/sonar.host.url>
+		<sonar.host.url>172.31.8.225:9980/</sonar.host.url>
 		<sonar.login>squ_02cb1f6b476d2a30284f8c55997e1beab09fdfe5</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://15.206.185.176:9980/etishreebehera/repository/canarabank-releases/</url>
+	      <url>http://172.31.14.181:9980/etishreebehera/repository/canarabank-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://15.206.185.176:9980/etishreebehera/repository/canarabank-snapshot/</url>
+	      <url>http://172.31.14.181:9980/etishreebehera/repository/canarabank-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
