--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3.1'
+name: mavenwebapp
 services:
-  springboot:
-    image: dockerhandson/maven-web-application:VERSION
-    restart: always
+  mavenwebapp:
+    image: etishreebehera/maven-web-app:${IMAGE_TAG}
     ports:
-    - 9090:8080
+    - 7070:8080
     networks:
-    - mavenappbridge
+    - mavenwebappbridge
+    restart: always
 networks:
-  mavenappbridge:
+  mavenwebappbridge:
+    driver: bridge
