--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mavenwebappdeployment
+  name: mavenwebapp
 spec:
-  revisionHistoryLimit: 10
+  revisionHistoryLimit: 5
   replicas: 2
   strategy:
     type: Recreate
@@ -12,13 +12,13 @@ spec:
       app: mavenwebapp
   template:
     metadata:
-      name: mavenwebapppod
+      name: mavenwebapp
       labels:
         app: mavenwebapp
     spec:
       containers:
-        - name: mavenwebappcontainer
-          image: dockerhandson/maven-web-application:TAG
+        - name: mavenwebapp
+          image: etishreebehera/maven-web-app:TAG
           ports:
             - containerPort: 8080
           resources:
